Fix button spacing

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     font-size: 17px;
     background-color: cyan;
 
-    height: 100vh;
+    min-height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@ main {
     background-color: #000;
     width: 100%;
     max-width: 700px;
-    height: 500px;
+    height: 700px;
     position: relative;
     overflow: none;
     z-index: 999;
@@ -37,11 +37,23 @@ main {
     align-items: center;
 }
 .controlls {
+    text-align: center;
     position: absolute;
     bottom: 20px;
     left: 20px;
+    z-index: 9999;
+}
+.controlls button#up {
+    transform: rotate(270deg);
+}
+.controlls button#down {
+    transform: rotate(90deg);
+}
+.controlls button#right {
+    margin-left: 70px;
 }
 .controlls button {
+    z-index: 9999;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 17px;
     border-radius: 7px;
@@ -49,4 +61,5 @@ main {
     color: #fff;
     background-color: rgba(128, 128, 128, 0.685);
     padding: 16px;
+    margin-top: 10px;
 }
